--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,19 @@
-<h1>Hello, Rails!</h1>
+<h1>Blackjack</h1>
+
+<a href="http://krumreyh.com">Test</a>
+
+<%= form_for :test do |tester| %>
+    <p>
+      <%= tester.label :title %><br>
+      <%= tester.text_field :title %>
+    </p>
+
+    <p>
+      <%= tester.label :text %><br>
+      <%= tester.text_area :text %>
+    </p>
+
+    <p>
+      <%= tester.submit %>
+    </p>
+<% end %>
